ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
        - path: /otusapp/e($|/)(.*)
          backend:
            serviceName: hello-service
            servicePort: 8000
